--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script src="./src/textboxWebComponent.js"></script>
+    <script src="./dist/webcomponent/webcomponents.es.js"></script>
   </head>
   <body>
     <bsdk-textbox placeholder="Name" class="input-field" oninput="console.log('Input event:', event.target.value)"></bsdk-textbox>
